[tool.poetry]
name = "pyrefactorlsp"
version = "0.1.0"
description = ""
authors = ["bdvil <benjam.devillers@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygls = "^1.3.0"
pydantic = "^2.6.4"
libcst = "^1.2.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[tool.poetry.scripts]
prlsp = "pyrefactorlsp.lsp:root"


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".github",
]

[tool.ruff.format]
docstring-code-format = true


[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true


[tool.pyrefactor]
folders = ["pyrefactorlsp"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
