[project]
name = "pyrefactorlsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "libcst>=1.4.0",
    "pydantic>=2.9.1",
    "pygls>=1.3.1",
]

[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".github",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true

[tool.pyrefactor]
folders = ["pyrefactorlsp"]

[project.scripts]
prlsp = "pyrefactorlsp.lsp:root"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
